# dotcopter

./: .travis.yml  Cargo.toml  LICENSE  README.org  install.conf.yaml  install.conf2.yaml  package.sh
.github/workflows/: main.yml  release.yml  rust.yml
src/: checksum.rs  config.rs  errors.rs  files.rs  import.rs  main.rs  main.rs.bk  model.rs  mutate.rs  parser.rs
