[package]
name = "dotcopter"
version = "0.1.2-pre"
authors = ["Patrick Haun <bomgar85@googlemail.com>"]
description = "A small tool to manage dotfile installation"
repository = "https://github.com/bomgar/dotcopter"
readme = "README.org"
keywords = ["dotfile", "dotfiles"]
license = "Apache-2.0"

[dependencies]
clap = "2.22"
slog-term = "1"
slog-stdlog = "1"
yaml-rust = "0.3"
#spectral = "0.6"
rust-crypto = "0.2"

[dependencies.slog]
version = "1"
features = ["release_max_level_trace", "max_level_debug"]

[dev-dependencies]
spectral = "0.6.0"
